# Crackdown2-Recomp

./: .gitignore  CMakeLists.txt  README.MD  README.md  crackdown2_config.toml  crackdown2_manifest.toml  default_functions.toml  default_hooks.toml  default_manifest.toml  default_rexcrt.toml
config/: CW2.toml  CW2_Switch_Tables.toml
src/: crackdown2_app.h  hooks.cpp  main.cpp
tools/: vibecoded_dff_decompressor.py  vibecoded_dff_parser.py
